Updated tooltip position and scrolling gap fixed.

--- a/web/src/components/WindChart/WindChart.css
+++ b/web/src/components/WindChart/WindChart.css
@@ -41,6 +41,11 @@
 
 }
 
+.wind-scroll {
+  overscroll-behavior-x: contain;
+  -webkit-overflow-scrolling: touch; /* smooth scrolling */
+}
+
 @media (max-width: 1280px) {
   .chart-container {
     width: 95vw;
